--- a/ACMmult/tbm_bib.bib
+++ b/ACMmult/tbm_bib.bib
@@ -134,6 +134,16 @@
   timestamp = {2009.03.28}
 }
 
+@INPROCEEDINGS{Anglade2009,
+  author = {A. Anglade and R. Ramirez and S. Dixon},
+  title = {Genre classification using harmony rules induced from automatic chord
+	transcriptions},
+  booktitle = {Proceedings of the 10th International Conference on Music Information
+	Retrieval (ISMIR 2009)},
+  year = {2009},
+  owner = {thierry}
+}
+
 @ARTICLE{Aucouturier2003,
   author = {J.J. Aucouturier and F. Pachet},
   title = {Representing Musical Genre: A State of the Art},
@@ -4644,6 +4654,15 @@
   address = {Princeton},
   owner = {thierry},
   timestamp = {2009.04.18}
+}
+
+@INPROCEEDINGS{Rose1998,
+  author = {K. Rose},
+  title = {Deterministic annealing for clustering, compression, classification,
+	regression, and related optimization problems},
+  booktitle = {Proceedings of the IEEE},
+  year = {1998},
+  pages = {2210--2239}
 }
 
 @BOOK{Rosenbaum1991,
